[gd_scene load_steps=22 format=3 uid="uid://d36etgjaa1fvo"]

[ext_resource type="Script" path="res://player/player_ui.gd" id="1_ky2jm"]
[ext_resource type="PackedScene" uid="uid://cdgjn1vonodr1" path="res://player/player_ui_minimap.tscn" id="2_l5bns"]
[ext_resource type="Texture2D" uid="uid://ctn2u4ghfq4cy" path="res://assets/TinySwords/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue.png" id="3_fhb0y"]
[ext_resource type="Texture2D" uid="uid://chtrguk37mbhg" path="res://assets/TinySwords/Resources/Resources/G_Idle.png" id="4_lmcwg"]
[ext_resource type="Texture2D" uid="uid://bwakooea0r0o0" path="res://assets/TinySwords/Resources/Resources/M_Idle.png" id="5_fedtt"]
[ext_resource type="Texture2D" uid="uid://cqqko1rxqiww0" path="res://assets/TinySwords/Resources/Resources/W_Idle_(NoShadow).png" id="6_ffn5q"]
[ext_resource type="Texture2D" uid="uid://b7qfr1sp7fbv5" path="res://assets/TinySwords/Factions/Knights/Buildings/House/House_Blue.png" id="7_l7glp"]
[ext_resource type="Texture2D" uid="uid://bdbga1keu84ht" path="res://assets/TinySwords/Resources/Gold Mine/GoldMine_Inactive.png" id="8_kwpvy"]
[ext_resource type="Texture2D" uid="uid://7aekqyq0s1ku" path="res://assets/TinySwords/Resources/Sheep/HappySheep_Idle.png" id="9_6rdvf"]
[ext_resource type="Texture2D" uid="uid://d0ccfiowlx3yv" path="res://assets/TinySwords/Resources/Resources/W_Idle.png" id="10_dvehf"]
[ext_resource type="Texture2D" uid="uid://cgpe0hibe1pb" path="res://assets/TinySwords/Terrain/Ground/Tilemap_Elevation.png" id="11_djsr0"]

[sub_resource type="ViewportTexture" id="ViewportTexture_x51in"]
viewport_path = NodePath("top_right/VBoxContainer/map/MarginContainer/SubViewportContainer/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvuq1"]
bg_color = Color(0.831373, 0, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apxq1"]
bg_color = Color(0, 0.721569, 0.329412, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1pyc"]
atlas = ExtResource("3_fhb0y")
region = Rect2(64, 69, 65, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvj1p"]
atlas = ExtResource("4_lmcwg")
region = Rect2(44, 48, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2oaa"]
atlas = ExtResource("5_fedtt")
region = Rect2(43, 57, 50, 43)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xspu"]
atlas = ExtResource("6_ffn5q")
region = Rect2(38, 72, 52, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_arrtm"]
atlas = ExtResource("9_6rdvf")
region = Rect2(39, 39, 51, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhmp8"]
atlas = ExtResource("10_dvehf")
region = Rect2(39, 70, 51, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g4nu"]
atlas = ExtResource("11_djsr0")
region = Rect2(190, 254, 68, 144)

[node name="player_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("1_ky2jm")

[node name="notification" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -255.5
offset_top = -42.0
offset_right = 255.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="notification"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="notification_label" type="Label" parent="notification/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Some text"

[node name="notification_timer" type="Timer" parent="notification"]

[node name="top_right" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -224.0
offset_bottom = 224.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="top_right"]
layout_mode = 2

[node name="map" type="PanelContainer" parent="top_right/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="top_right/VBoxContainer/map"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="TextureRect" type="TextureRect" parent="top_right/VBoxContainer/map/MarginContainer"]
layout_mode = 2
texture = SubResource("ViewportTexture_x51in")

[node name="SubViewportContainer" type="SubViewportContainer" parent="top_right/VBoxContainer/map/MarginContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="top_right/VBoxContainer/map/MarginContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(200, 200)
size_2d_override = Vector2i(200, 200)
render_target_update_mode = 4

[node name="ui_minimap" parent="top_right/VBoxContainer/map/MarginContainer/SubViewportContainer/SubViewport" instance=ExtResource("2_l5bns")]

[node name="next_wave_time" type="PanelContainer" parent="top_right/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="top_right/VBoxContainer/next_wave_time"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="top_right/VBoxContainer/next_wave_time/MarginContainer"]
layout_mode = 2

[node name="next_wave_text" type="Label" parent="top_right/VBoxContainer/next_wave_time/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Next wave in: "

[node name="next_wave_time" type="Label" parent="top_right/VBoxContainer/next_wave_time/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "1 m 24 s"

[node name="left" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 419.0
offset_bottom = 70.0

[node name="VBoxContainer" type="VBoxContainer" parent="left"]
layout_mode = 2

[node name="health" type="PanelContainer" parent="left/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="left/VBoxContainer/health"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="health_bar" type="ProgressBar" parent="left/VBoxContainer/health/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_vvuq1")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="health_label" type="Label" parent="left/VBoxContainer/health/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "100"

[node name="experience" type="PanelContainer" parent="left/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="left/VBoxContainer/experience"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ProgressBar" type="ProgressBar" parent="left/VBoxContainer/experience/MarginContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_apxq1")
max_value = 1.0

[node name="resources_panel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="resources_panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="resources_panel/MarginContainer"]
layout_mode = 2

[node name="population" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_h1pyc")
expand_mode = 3
stretch_mode = 4

[node name="population_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="gold" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_yvj1p")
expand_mode = 3
stretch_mode = 4

[node name="gold_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "0"

[node name="food" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_j2oaa")
expand_mode = 3
stretch_mode = 4

[node name="food_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="wood" type="TextureRect" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_5xspu")
stretch_mode = 5

[node name="wood_label" type="Label" parent="resources_panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="build_panel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -185.5
offset_right = 265.0
offset_bottom = 185.5
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="build_panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="GridContainer" type="GridContainer" parent="build_panel/MarginContainer"]
layout_mode = 2
columns = 2

[node name="house_button" type="Button" parent="build_panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_type_variation = &"ButtonBig"
icon = ExtResource("7_l7glp")
icon_alignment = 1
expand_icon = true

[node name="gold_mine_button" type="Button" parent="build_panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_type_variation = &"ButtonBig"
icon = ExtResource("8_kwpvy")
icon_alignment = 1
expand_icon = true

[node name="food_hut_button" type="Button" parent="build_panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_type_variation = &"ButtonBig"
icon = SubResource("AtlasTexture_arrtm")
icon_alignment = 1
expand_icon = true

[node name="wood_cutter_button" type="Button" parent="build_panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_type_variation = &"ButtonBig"
icon = SubResource("AtlasTexture_bhmp8")
icon_alignment = 1
expand_icon = true

[node name="wall_button" type="Button" parent="build_panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_type_variation = &"ButtonBig"
icon = SubResource("AtlasTexture_0g4nu")
icon_alignment = 1
expand_icon = true

[node name="city_buttons" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -83.0
offset_right = 160.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="city_buttons"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="city_buttons/MarginContainer"]
layout_mode = 2

[node name="build_mode_button" type="Button" parent="city_buttons/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_type_variation = &"ButtonMid"
text = "Build Mode"

[connection signal="timeout" from="notification/notification_timer" to="." method="on_notification_timer_timeout"]
[connection signal="pressed" from="build_panel/MarginContainer/GridContainer/house_button" to="." method="on_house_button_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/GridContainer/gold_mine_button" to="." method="on_gold_mine_button_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/GridContainer/food_hut_button" to="." method="on_food_hut_button_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/GridContainer/wood_cutter_button" to="." method="on_wood_cutter_button_pressed"]
[connection signal="pressed" from="build_panel/MarginContainer/GridContainer/wall_button" to="." method="on_wall_button_pressed"]
[connection signal="pressed" from="city_buttons/MarginContainer/HBoxContainer/build_mode_button" to="." method="on_build_mode_button_pressed"]
